--- a/src/app/pages/default/default.component.html
+++ b/src/app/pages/default/default.component.html
@@ -1,5 +1,29 @@
 <section class="ftco-section ftco-no-pb ftco-no-pt">
   <div class="container">
-    <p>default works!</p>
+    <div class="left-sidebar">
+      <div class="left-sidebar--sticky-container">
+        <nav class="navbar">
+          <ul class="navbar-nav me-auto mb-2">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                >Questions</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tags</a>
+            </li>
+            <li class="nav-item">
+              <a
+                routerLink="/ask-question"
+                class="nav-link"
+              >
+                <span class="btn btn-secondary">Ask A Question</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="row"></div>
   </div>
 </section>
