--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,13 +6,15 @@
       data-scrollax-parent="true"
     >
       <div class="col-md-7 ftco-animate">
-        <span class="subheading">Welcome to <span class="brand-name">GetSolvedNow</span></span>
+        <span class="subheading"
+          >Welcome to <span class="brand-name">GetSolvedNow</span></span
+        >
         <h1 class="mb-4">We provide solution to all IT problems</h1>
         <p class="caps">
           Let's get onboard to start journey of freedom and ease
         </p>
         <p class="mb-0">
-          <a href="#" class="btn btn-primary me-3">Jump to Questions?</a>
+          <a href="#" class="btn btn-primary me-3">Jump to Questions</a>
           <a href="#" class="btn btn-white">Learn More</a>
         </p>
       </div>
@@ -26,47 +28,97 @@
       <div class="col-md-7"></div>
       <div class="col-md-5 order-md-last">
         <div class="login-wrap p-4 p-md-5">
-          <h3 class="mb-4">Register Now</h3>
-          <form action="#" class="signup-form">
-            <div class="form-group">
-              <label class="label" for="name">Full Name</label>
-              <input type="text" class="form-control" placeholder="John Doe" />
-            </div>
-            <div class="form-group">
-              <label class="label" for="email">Email Address</label>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="johndoe@gmail.com"
-              />
-            </div>
-            <div class="form-group">
-              <label class="label" for="password">Password</label>
-              <input
-                id="password-field"
-                type="password"
-                class="form-control"
-                placeholder="Password"
-              />
-            </div>
-            <div class="form-group">
-              <label class="label" for="password">Confirm Password</label>
-              <input
-                id="password-field"
-                type="password"
-                class="form-control"
-                placeholder="Confirm Password"
-              />
-            </div>
-            <div class="form-group d-flex justify-content-end mt-4">
-              <button type="submit" class="btn btn-primary submit">
-                <span class="fa fa-paper-plane"></span>
-              </button>
-            </div>
-          </form>
-          <p class="text-center">
-            Already have an account? <a href="#signin">Sign In</a>
-          </p>
+          <div *ngIf="showForm === 'register'" class="register-form">
+            <h3 class="mb-4">Register Now</h3>
+            <form autocomplete="off" role="presentation" class="signup-form">
+              <div class="form-group">
+                <label class="label" for="name">Full Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="John Doe"
+                />
+              </div>
+              <div class="form-group">
+                <label class="label" for="email">Email Address</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="johndoe@gmail.com"
+                  readonly
+                  onfocus="if (this.hasAttribute('readonly')) {
+                    this.removeAttribute('readonly');
+                    // fix for mobile safari to show virtual keyboard
+                    this.blur();
+                    this.focus();
+                  }"
+                />
+              </div>
+              <div class="form-group">
+                <label class="label" for="password">Password</label>
+                <input
+                  id="password-field"
+                  type="password"
+                  class="form-control"
+                  placeholder="Password"
+                />
+              </div>
+              <div class="form-group">
+                <label class="label" for="password">Confirm Password</label>
+                <input
+                  id="password-field"
+                  type="password"
+                  class="form-control"
+                  placeholder="Confirm Password"
+                />
+              </div>
+              <div class="form-group d-flex justify-content-end mt-4">
+                <button type="submit" class="btn btn-primary submit">
+                  Sign up
+                </button>
+              </div>
+            </form>
+            <p class="text-center">
+              Already have an account? <a routerLink="/login">Sign In</a>
+            </p>
+          </div>
+          <div *ngIf="showForm === 'login'" class="login-form">
+            <h3 class="mb-4">Login</h3>
+            <form autocomplete="off" role="presentation" class="login-form">
+              <div class="form-group">
+                <label class="label" for="email">Email Address</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="johndoe@gmail.com"
+                  readonly
+                  onfocus="if (this.hasAttribute('readonly')) {
+                    this.removeAttribute('readonly');
+                    // fix for mobile safari to show virtual keyboard
+                    this.blur();
+                    this.focus();
+                  }"
+                />
+              </div>
+              <div class="form-group">
+                <label class="label" for="password">Password</label>
+                <input
+                  id="password-field"
+                  type="password"
+                  class="form-control"
+                  placeholder="Password"
+                />
+              </div>
+              <div class="form-group d-flex justify-content-end mt-4">
+                <button type="submit" class="btn btn-primary submit">
+                  Sign in
+                </button>
+              </div>
+            </form>
+            <p class="text-center">
+              Don’t have an account? <a routerLink="/login" [queryParams]="{ register: true }">Sign up</a>
+            </p>
+          </div>
         </div>
       </div>
     </div>
