--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
-@import "~@mdi/font/scss/materialdesignicons";
+@import 'bootstrap/scss/bootstrap';
+@import "@mdi/font/scss/materialdesignicons";
 @import './assets/scss/mixins';
+@import '~quill/dist/quill.snow.css';
+
 
 
 html {
