--- a/src/app/pages/ask-question/ask-question.component.html
+++ b/src/app/pages/ask-question/ask-question.component.html
@@ -38,7 +38,8 @@
                 </form>
               </div>
             </div>
-            This is some text within a card body.
+            <!-- This is some text within a card body. -->
+            <button type="submit" class="btn btn-primary w-100">Submit</button>
           </div>
         </div>
       </div>
