--- a/src/app/pages/default/default.component.html
+++ b/src/app/pages/default/default.component.html
@@ -1,5 +1,6 @@
 <section class="ftco-section ftco-no-pb ftco-no-pt">
   <div class="container">
+    <div class="row">
     <div class="left-sidebar">
       <div class="left-sidebar--sticky-container">
         <nav class="navbar">
@@ -24,6 +25,46 @@
         </nav>
       </div>
     </div>
-    <div class="row"></div>
+    <div class="col-md-8 mt-3">
+      <div class="d-flex justify-content-between">
+        <h3>All Questions</h3>
+        <div>
+          <a routerLink="/ask-question" class="btn btn-primary">Ask Question</a>
+        </div>
+      </div>
+      <div>
+        <div class="d-flex justify-content-between mt-3">
+          <div><h5>Questions</h5></div>
+            <div class="d-flex flex-row justify-content-between">
+              <div>
+                <div class="btn-group" role="group" aria-label="Basic outlined example">
+                    <button class="btn btn-outline-secondary">Newest</button>
+                    <button class="btn btn-outline-secondary">Active</button>
+                    <button class="btn btn-outline-secondary">Bountied</button>
+                    <button class="btn btn-outline-secondary">Unanswered</button>
+                    <div class="dropdown">
+                      <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton1">
+                        More</button>
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item">Frequent</a></li>
+                        <li><a class="dropdown-item">Score</a></li>
+                      </ul>
+                    </div>
+                    <div>
+                      <button class="btn btn-outline-primary">Filter</button>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr>
+          <div>
+            <h4>Question Title</h4>
+            <div>Question Description</div>
+          </div>
+      </div>
+    </div>
+    
+  </div>
   </div>
 </section>
