--- a/src/app/pages/ask-question/ask-question.component.html
+++ b/src/app/pages/ask-question/ask-question.component.html
@@ -39,7 +39,7 @@
               </div>
             </div>
             <!-- This is some text within a card body. -->
-            <button type="submit" class="btn btn-primary w-100">Submit</button>
+            <button type="submit" class="btn btn-primary w-100" (click)="submitAskQuestion(richTextForm.value)">Submit</button>
           </div>
         </div>
       </div>
